css/style.css
/* ... */
.chevron-wrapper {
  text-align: center;
  padding: auto;
  margin: 40px;
}

.intro i {
  color: var(--clr-dark);
  font-size: var(--fs-h2);
}

/* My services section */

.my-services {
  background-color: var(--clr-dark);
  background-image: url(../img/services-bg.jpg);
  background-size: cover;
  /* background-blend-mode: multiply; */
  color: var(--clr-light);
  text-align: center;
}

.section__title--services {
  color: var(--clr-accent);
  position: relative;
}

.section__title--services::after {
  content: '';
  display: block;
  width: 2em;
  height: 1px;
  margin: 0.5em auto 1em;
  background: var(--clr-light);
  opacity: 0.25;
}

.services {
  margin-bottom: 4em;
}

.service {
  max-width: 500px;
  margin: 0 auto;
}

@media (min-width: 800px) {
  .services {
    display: flex;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
  }

  .service + .service {
    margin-left: 2em;
  }
}

.about-me {
  max-width: 1000px;
  margin: 0 auto;
}

.about-me__img {
  box-shadow: var(--bs);
  border: 8px solid var(--clr-light);
  border-bottom: 40px solid;
}

@media (min-width: 600px) {
  .about-me {
    display: grid;
    grid-template-columns: 1fr 200px;
    grid-template-areas:
      'title img'
      'subtitle img'
      'text img';
    column-gap: 2em;
  }

  .section__title--about,
  .section__subtitle--about {
    grid-area: title;
  }

  .section__subtitle--about {
    grid-column: 1/-1;
    grid-row: 2;
    position: relative;
    left: -1em;
    width: calc(100% + 2em);
    padding-left: 1em;
    padding-right: calc(200px + 4em);
  }

  .about-me__img {
    grid-area: img;
    position: relative;
    z-index: 2;
  }
}

/* Projects */
.spotlight {
  -moz-align-items: center;
  -webkit-align-items: center;
  -ms-align-items: center;
  align-items: center;
  display: -moz-flex;
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  color: var(--clr-light);
  padding: 40px 0px;
  max-width: 1000px;
  overflow: hidden;
}
.spotlight .image {
  -moz-order: 1;
  -webkit-order: 1;
  -ms-order: 1;
  order: 1;
  border-radius: 0;
  width: 40%;
}

.spotlight .image img {
  border-radius: 0;
  width: 100%;
}

.spotlight .content {
  padding: 0em 4em 0em 4em;
  -moz-order: 2;
  -webkit-order: 2;
  -ms-order: 2;
  order: 2;
  max-width: 48em;
  width: 60%;
}

.spotlight:nth-child(2n) {
  -moz-flex-direction: row-reverse;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.content {
  /* background-color: rgba(255, 255, 255, 0.04); */
}

.project-desc {
  background-color: rgba(255, 255, 255, 0.07);
  padding: 1em;
}
.featured-label {
  color: var(--clr-accent);
}

.project-tech-r,
.project-links-r {
  text-align: right;
}

.content i {
  padding: 0px 10px 0px 10px;
}

.content a {
  text-decoration: none;
  opacity: 0.5;
  color: var(--clr-light);
}

.content a:hover {
  opacity: 1;
}

/* tooltips */

[data-tooltip] {
  position: relative;
  z-index: 2;
  cursor: pointer;
}

[data-tooltip]:before,
[data-tooltip]:after,
.tooltip:before,
.tooltip:after {
  position: absolute;
  visibility: hidden;
  -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=0)';
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
  opacity: 0;
  -webkit-transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out,
    -webkit-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
  -moz-transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out,
    -moz-transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
  transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out,
    transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
  -webkit-transform: translate3d(0, 0, 0);
  -moz-transform: translate3d(0, 0, 0);
  transform: translate3d(0, 0, 0);
  pointer-events: none;
  text-align: center;
}

[data-tooltip]:hover:before,
[data-tooltip]:hover:after,
[data-tooltip]:focus:before,
[data-tooltip]:focus:after,
.tooltip:hover:before,
.tooltip:hover:after,
.tooltip:focus:before,
.tooltip:focus:after {
  visibility: visible;
  -ms-filter: 'progid:DXImageTransform.Microsoft.Alpha(Opacity=100)';
  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
  opacity: 1;
}

.tooltip:before,
[data-tooltip]:before {
  z-index: 1001;
  border: 6px solid transparent;
  background: transparent;
  content: '';
}

.tooltip:after,
[data-tooltip]:after {
  z-index: 1000;
  padding: 8px;
  width: auto;
  background-color: var(--clr-dark);
  background-color: hsla(0, 0%, 20%, 0.9);
  color: var(--clr-light);
  content: attr(data-tooltip);
  font-size: 14px;
  line-height: 1.2;
}

.tooltip-bottom:before,
.tooltip-bottom:after {
  top: 100%;
  bottom: auto;
  left: 50%;
}

.tooltip-bottom:before {
  margin-top: -12px;
  margin-bottom: 0;
  margin-left: -6px;
  border-top-color: transparent;
  border-bottom-color: var(--clr-dark);
  border-bottom-color: hsla(0, 0%, 20%, 0.9);
}

.tooltip-bottom:hover:before,
.tooltip-bottom:hover:after,
.tooltip-bottom:focus:before,
.tooltip-bottom:focus:after {
  -webkit-transform: translateY(12px);
  -moz-transform: translateY(12px);
  transform: translateY(12px);
}

[data-tooltip]:after,
.tooltip:after,
.tooltip-top:after {
  margin-left: -20px;
}

/* [data-tooltip]:hover:before,
[data-tooltip]:hover:after,
[data-tooltip]:focus:before,
[data-tooltip]:focus:after,
.tooltip:hover:before,
.tooltip:hover:after,
.tooltip:focus:before,
.tooltip:focus:after,
.tooltip-top:hover:before,
.tooltip-top:hover:after,
.tooltip-top:focus:before,
.tooltip-top:focus:after {
  -webkit-transform: translateY(-12px);
  -moz-transform: translateY(-12px);
  transform: translateY(-12px);
} */

/* .spotlight:nth-child(1) {
  background-color: rgba(0, 0, 0, 0.075);
}

.spotlight:nth-child(2) {
  background-color: rgba(0, 0, 0, 0.15);
}

.spotlight:nth-child(3) {
  background-color: rgba(0, 0, 0, 0.225);
}

.spotlight:nth-child(4) {
  background-color: rgba(0, 0, 0, 0.3);
}
/* ... */

